{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 107,
  "lineage": "b0062fab-4de7-f721-def0-61ff69227719",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043c5e030d45cb078",
            "arn": "arn:aws:ec2:us-east-1:211125355004:elastic-ip/eipalloc-043c5e030d45cb078",
            "association_id": "eipassoc-0f1bff9e61ae3ddc7",
            "domain": "vpc",
            "id": "eipalloc-043c5e030d45cb078",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0394936e1f001e25f",
            "private_dns": "ip-10-0-10-181.ec2.internal",
            "private_ip": "10.0.10.181",
            "public_dns": "ec2-35-172-59-77.compute-1.amazonaws.com",
            "public_ip": "35.172.59.77",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-07caf09b362be10b8",
            "arn": "arn:aws:ec2:us-east-1:211125355004:instance/i-0db929e2f9e9391e7",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0db929e2f9e9391e7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09c6ee4d23bd38152",
            "private_dns": "ip-10-0-3-116.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.116",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-05b269c4c2180d5b0",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "sg-0d26526d70051a88c"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b00b29025f6996cd",
            "tags": {
              "Environment": "dev",
              "Name": "my-project-apache-instance"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-project-apache-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d26526d70051a88c"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:internet-gateway/igw-0b8a6d183940dbd87",
            "id": "igw-0b8a6d183940dbd87",
            "owner_id": "211125355004",
            "tags": {
              "Name": "my-project-igw"
            },
            "tags_all": {
              "Name": "my-project-igw"
            },
            "vpc_id": "vpc-0cbac3c53a50d6e47"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:211125355004:loadbalancer/app/dev-alb/7a3fa0dc40a343a0",
            "arn_suffix": "app/dev-alb/7a3fa0dc40a343a0",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "dev-alb-1316590365.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:211125355004:loadbalancer/app/dev-alb/7a3fa0dc40a343a0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d26526d70051a88c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0153313bc2a82045c"
              },
              {
                "subnet_id": "subnet-02c94590c670957e5"
              },
              {
                "subnet_id": "subnet-058233ea41e969d1a"
              }
            ],
            "subnets": [
              "subnet-0153313bc2a82045c",
              "subnet-02c94590c670957e5",
              "subnet-058233ea41e969d1a"
            ],
            "tags": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0cbac3c53a50d6e47",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-043c5e030d45cb078",
            "association_id": "eipassoc-0f1bff9e61ae3ddc7",
            "connectivity_type": "public",
            "id": "nat-0ea1db3a951506b8c",
            "network_interface_id": "eni-0394936e1f001e25f",
            "private_ip": "10.0.10.181",
            "public_ip": "35.172.59.77",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-058233ea41e969d1a",
            "tags": {
              "Name": "my-project-NAT-gw"
            },
            "tags_all": {
              "Name": "my-project-NAT-gw"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.public",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:route-table/rtb-02339272bee8e5af1",
            "id": "rtb-02339272bee8e5af1",
            "owner_id": "211125355004",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-project-private-route-table"
            },
            "tags_all": {
              "Name": "my-project-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cbac3c53a50d6e47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 14,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 15,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 16,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 17,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 18,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 19,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 20,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 21,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 22,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011f03c6ffad40d7b",
            "route_table_id": "rtb-02339272bee8e5af1",
            "subnet_id": "subnet-0b00b29025f6996cd"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:security-group/sg-0d26526d70051a88c",
            "description": "Security group for web servers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d26526d70051a88c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-project-web-sg",
            "name_prefix": "",
            "owner_id": "211125355004",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cbac3c53a50d6e47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-0b00b29025f6996cd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b00b29025f6996cd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-private-subnet"
            },
            "tags_all": {
              "Name": "my-project-private-subnet"
            },
            "vpc_id": "vpc-0cbac3c53a50d6e47"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-058233ea41e969d1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058233ea41e969d1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-0cbac3c53a50d6e47"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-0153313bc2a82045c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0153313bc2a82045c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-0cbac3c53a50d6e47"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:subnet/subnet-02c94590c670957e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02c94590c670957e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125355004",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-project-public-subnet"
            },
            "tags_all": {
              "Name": "my-project-public-subnet"
            },
            "vpc_id": "vpc-0cbac3c53a50d6e47"
          },
          "dependencies": [
            "aws_vpc.vpc",
            "data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:211125355004:vpc/vpc-0cbac3c53a50d6e47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-077b8e63c61b4ad5b",
            "default_route_table_id": "rtb-0641270ffb8bd4d67",
            "default_security_group_id": "sg-0fa4ab76e2af018a1",
            "dhcp_options_id": "dopt-091fa171af1c13b04",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cbac3c53a50d6e47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0641270ffb8bd4d67",
            "owner_id": "211125355004",
            "tags": {
              "Name": "my-project-vpc"
            },
            "tags_all": {
              "Name": "my-project-vpc"
            }
          }
        }
      ]
    }
  ]
}